@startuml
' --- Configuration ---

skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam shadowing false
title Diagramme de Classe : AnalysisService
package "DTOs (Entrée & Sortie)" {
class ConsolidatedPlanning {
SegmentsParOuvrierId: Dictionary<string, List<SegmentDeTravail>>
}
class Ouvrier
class Metier 
class ConfigurationPlanification
' --- Nouveaux DTOs de sortie ---
package "Rapports d'Analyse" <<Folder>> {
class AnalysisReport {
+ SyntheseProjet: SyntheseProjetReport
+ AnalysesOuvriers: List<AnalyseOuvrierReport>
+ ChargeJournaliere: Dictionary<DateTime, int>
}
class SyntheseProjetReport {
+ CoutTotalRh: decimal
+ CoutTotalIndirect: decimal
+ ...
}
class "AnalyseOuvrierReport" as AOR <<(M,Lime) Modified>> {
+ OuvrierId: string
+ TauxOccupation: double
+ ...
--
+ MetierPrincipalId: string
+ MetierPrincipalNom: string
}
class MetierTensionReport {
+ Conclusion: string
+ Repartition: List<MetierCount>
}
class MetierCount
}
}
package "Utilities" {
class AnalysisService {
' --- Points d'Entrée Publics ---
GenerateReport(planning, allOuvriers, allMetiers, config, joursOuvresCalculator): AnalysisReport
AnalyzeMetierTension(ouvrierClesIds, allOuvriers): MetierTensionReport
--
' --- Logique Privée ---
_CalculerSyntheseProjet(...): SyntheseProjetReport
_CalculerAnalysesOuvriers(...): List<AnalyseOuvrierReport>
_CalculerChargeJournaliere(...): Dictionary<DateTime, int>
}
}
' --- Relations ---
AnalysisService ..> ConsolidatedPlanning : "lit"
AnalysisService ..> Ouvrier : "lit"
AnalysisService ..> Metier : "lit" 
AnalysisService ..> ConfigurationPlanification : "lit"
AnalysisService ..> AnalysisReport : "crée"
AnalysisService ..> MetierTensionReport : "crée"
AnalysisReport o-- SyntheseProjetReport
AnalysisReport o-- AOR
MetierTensionReport o-- MetierCount
note top of AnalysisService
<b>Service de Calcul Pur (Stateless)</b>
Sa seule responsabilité est de transformer des données
d'entrée en rapports d'analyse (KPIs).
Il ne dépend d'aucun autre <b>service injecté</b>.
end note
note right of AnalysisService::_CalculerAnalysesOuvriers
<b>Enrichissement du Rapport</b>
Utilise la liste des métiers (allMetiers)
fournie en paramètre pour identifier le
métier principal de chaque ouvrier
(via la propriété <i>EstMetierPrincipal</i>)
et l'inclure dans le rapport final.
end note
@enduml